# libgd

./: CMakeLists.txt  CONTRIBUTING.md  Makefile.am
.github/workflows/: ci.yml  ci_ubuntu.yml  ci_windows.yml  coverity.yml
examples/: uhdr.c
src/: bmp.h  gd.c  gd.h  gd_bmp.c  gd_color.c  gd_heif.c  gd_intern.h  gd_jpeg.c  gd_png.c  gd_tiff.c  gd_uhdr.c  gdcache.c
tests/avif/: CMakeLists.txt  Makemodule.am  avif_alpha.c  bad_input.c
tests/bmp/: CMakeLists.txt  Makemodule.am  bmp_size.c  bmp_write_ex.c
tests/gdimagecopyrotated/: CMakeLists.txt  bug00981.c  bug00981_2.c
tests/gdimageellipse/: bug00967.c
tests/gdimagerotate/: php_gh10614.c
tests/gdimagestringft/: gdimagestringft_bbox.c
tests/gdtest/: CMakeLists.txt  gdtest.c
tests/metadata/: png_exiv2.cpp
tests/tiff/: tiff_dpi.c  tiff_read_bw.c
tests/uhdr/: CMakeLists.txt  Makemodule.am  uhdr_cli_parity_noop.c  uhdr_cli_parity_quality_noop.c  uhdr_metadata_resize.c  uhdr_ptr_roundtrip.c  uhdr_roundtrip.c
tests/webp/: webp_conformance.c
