add_definitions(-DGDTEST_TOP_DIR="${CMAKE_CURRENT_SOURCE_DIR}/..")
SET(GDTEST_FILES gdtest.c)
if(WIN32)
# CheckSymbolExists is safer for Windows headers than CheckFunctionExists
    include(CheckSymbolExists)
    check_symbol_exists(mkdtemp "stdlib.h" HAVE_MKDTEMP)
	LIST(APPEND GDTEST_FILES readdir.c)
endif()
add_library(gdTest STATIC ${GDTEST_FILES})
# Feed HAVE_MKDTEMP specifically to the gdTest library if found
if(HAVE_MKDTEMP)
    target_compile_definitions(gdTest PRIVATE HAVE_MKDTEMP)
endif()

add_executable(gdpdiff gdpdiff.c)
target_link_libraries(gdpdiff gdTest ${GD_LIB})
if (BUILD_SHARED_LIBS)
	target_link_libraries(gdTest ${GD_LIB})
else()
	target_link_libraries(gdTest ${GD_LIB_STATIC})
endif()
